template.yml
---
AWSTemplateFormatVersion: 2010-09-09

Description: CapstoneDemo

Parameters:
  BastionImageId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-ebs
  BastionKeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: EC2 key used to connect to the bastion host
    Default: cloudformation_capstore

Mappings: 
  RegionVpc:
    ap-northeast-1:
      hvm: "vpc-a6e909c0"
    ap-southeast-2:
      hvm: "vpc-24896d42"
  RegionSec:
    ap-northeast-1:
      hvm: "sg-83d232cc"
    ap-southeast-2:
      hvm: "sg-0b505abdd71a1f528"

Resources:
  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: !Sub 'Bastion for ${AWS::StackName}'
      SecurityGroupEgress:
        - CidrIp: 10.0.0.0/0
          FromPort: 22
          ToPort: 22
          IpProtocol: 'tcp'
          Description: 'some rule description'
        - DestinationSecurityGroupId: !FindInMap [RegionSec, !Ref 'AWS::Region', hvm]
          IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          Description: 'some rule description'
      SecurityGroupIngress: []
      VpcId: !FindInMap [RegionVpc, !Ref 'AWS::Region', hvm]

  Bastion:
    Type: AWS::EC2::Instance
    Properties:
      DisableApiTermination: false
      ImageId: !Ref BastionImageId
      InstanceType: t2.micro
      KeyName: !Ref BastionKeyName
      Monitoring: false
      SecurityGroupIds:
        - !FindInMap [RegionSec, !Ref 'AWS::Region', hvm]
        - !Ref BastionSecurityGroup
      UserData: !Base64 'yum install mysql --assumeyes'

Outputs:
  BastionHost:
    Value: !GetAtt Bastion.PublicDnsName
    Export:
      Name: !Sub '${AWS::StackName}BastionHost'
  BastionIp:
    Value: !GetAtt Bastion.PublicIp
    Export:
      Name: !Sub '${AWS::StackName}BastionIp'
  BastionSecurityGroupId:
    Value: !GetAtt BastionSecurityGroup.GroupId
    Export:
      Name: !Sub '${AWS::StackName}BastionSecurityGroupId'
